# Logis

./: CMakeLists.txt  README.md
src/: circuit.cpp  circuit.h  circuit_builder.cpp  circuit_builder.h  executor.cpp  executor.h  main.cpp  pin.cpp  pin.h  semaphore.cpp  semaphore.h  stealing_queue.h  stealing_stack.h
src/components/: adder.cpp  adder.h  and_gate.cpp  and_gate.h  buffer.cpp  buffer.h  clock.cpp  clock.h  counter.cpp  counter.h  not_gate.cpp  not_gate.h  or_gate.cpp  or_gate.h  register.cpp  register.h  xor_gate.cpp  xor_gate.h
src/ui/: ui_circuit.cpp  ui_circuit.h  ui_element.cpp  ui_element.h  ui_manager.cpp  ui_manager.h  ui_menu_bar.cpp  ui_menu_bar.h  ui_tool_panel.cpp  ui_tool_panel.h  ui_workspace.cpp  ui_workspace.h
